--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="morning_start_content">Début matin</string>
     <string name="morning_end_content">Fin matin</string>
     <string name="afternoon_start_content">Début après-midi</string>
+    <string name="morningDurationText">Durée matin : %1$02d:%2$02d</string>
+    <string name="lunchDurationText">Durée repas : %1$02d:%2$02d</string>
+    <string name="afternoonEndTimeText">Fin de journée : %1$tH:%1$tM</string>
 </resources>
