--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <resources>
     <string name="app_name">AndroidTimeChecker</string>
 
-    <string name="title_activity_time_checker">TimeCheckerActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_time_checker">TimeChecker</string>
     <string name="morning_start_content">Début matin</string>
     <string name="morning_end_content">Fin matin</string>
     <string name="afternoon_start_content">Début après-midi</string>
